k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finca-front-service
  namespace: finca
spec:
  selector:
    app: finca-front
  ports:
  - protocol:  TCP
    port: 80
    targetPort: 80
  type: ClusterIP
