k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finca-front-ingress
  namespace: finca
spec: 
  rules:
  - host: finca.javeriana.co
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: finca-front-service
            port:
              number: 80
